--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
 numpy>=1.19.2
 opencv-python>=4.5.1
 Pillow>=8.0.1
-pyautogui>=0.9.52
 matplotlib>=3.3.2
-pyobjc-framework-Quartz>=7.0  # For macOS screen capture 
+keyboard>=0.13.5
+psutil>=5.8.0
+
+# Platform-specific dependencies
+# These will be installed based on your OS
+
+# Windows dependencies
+pywin32>=228; sys_platform == 'win32'
+ctypes-callable>=1.0.0; sys_platform == 'win32'
+
+# macOS dependencies
+pyautogui>=0.9.52; sys_platform == 'darwin'
+pyobjc-framework-Quartz>=7.0; sys_platform == 'darwin'
+PyQt6>=6.2.0; sys_platform == 'darwin' 
